Fix #38: configura conexão do BolsaProdutividadeService com o BD

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1,1 +1,3 @@
-jakarta.faces.component.UIInput.REQUIRED 			= Campo "{0}" é obrigatório.
+jakarta.faces.component.UIInput.REQUIRED 			= Campo "{0}" obrigatÃ³rio.
+
+
